# django-lab

./: .gitignore  db.sqlite3  pyproject.toml
blog/: admin.py  views.py
blog/migrations/: 0001_initial.py
djangoLab/: asgi.py  settings.py  urls.py  wsgi.py
moviesapp/: admin.py  models.py  views.py
moviesapp/migrations/: 0001_initial.py
templates/blog/: base.html  index.html  post_detail.html
templates/moviesapp/: actor_list.html  base.html  category_list.html  genre_list.html  home.html  movie_list.html
